--- a/index.html
+++ b/index.html
@@ -1,8 +1,34 @@
 <html>
 <head>
+    <style>
+        html, body {
+            border: 1px solid yellow;
+            height: 100%;
+        }
+
+        #main {
+            width: 300px;
+            height: 300px;
+            border: 1px solid red;
+        }
+
+        .hover:hover {
+            background-color: green;
+        }
+    </style>
 </head>
 <body>
-<div id="main"></div>
+<ul>
+    <li>
+        <a href="javascript:return false" id="link" class="hover">Hello Link</a>
+    </li>
+    <li>
+        <div id="div" class="hover">Hello div</div>
+    </li>
+</ul>
+
+
+<script src="./node_modules/jquery/dist/jquery.js"></script>
 <script src="./index.js"></script>
 </body>
 </html>
